# orders-service

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  orders.db  pyproject.toml  security-audit.txt  test_orders.db
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0f41d7c9f6ab_add_order_details_fields.py  7b917d4cbf91_add_customer_name_to_orders.py  806cd4639b90_initial_create_orders_table.py
scripts/: export_runtime_requirements.py
src/orders_service/: config.py
src/orders_service/api/: dependencies.py  main.py  security.py
src/orders_service/api/routers/: auth.py  orders.py
src/orders_service/api/schemas/: orders.py
src/orders_service/application/: exceptions.py
src/orders_service/application/ports/: order_repository.py
src/orders_service/application/use_cases/: create_order.py  get_order.py
src/orders_service/domain/entities/: order.py
src/orders_service/domain/exceptions/: domain_exceptions.py
src/orders_service/domain/value_objects/: money.py  order_id.py  order_status.py
src/orders_service/infrastructure/database/: models.py  session.py
src/orders_service/infrastructure/repositories/: sqlalchemy_order_repository.py
tests/: conftest.py  test_config.py
tests/api/: test_auth_api.py  test_orders_api.py
tests/application/: fake_order_repository.py  test_create_order.py  test_get_order.py
tests/domain/: test_money.py  test_order.py  test_order_id.py
tests/integration/: test_sqlalchemy_order_repositpry.py
